more sonnar fixes